[tool.poetry]
name = "ghd"
version = "0.1.0"
description = "GitHub Deployments API CLI"
authors = ["moneymeets GmbH <service@moneymeets.com>"]

[tool.poetry.dependencies]
python = "^3.10"

aiohttp = "*"
asyncstdlib = "*"
babel = "*"
blessed = "*"
click = "*"
colorama = "*"
dataclasses-json = "*"
progressbar2 = "*"
pyte = "*"
tabulate = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

add-trailing-comma = "*"
black = "*"
flake8 = "*"
flake8-black = "*"
flake8-coding = "*"
flake8-isort = "*"
flake8-quotes = "*"
isort = { extras = ["pyproject"], version = "*" }

[tool.poetry.scripts]
ghd = 'ghd:run_main'

[tool.black]
line_length = 120
target_version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
branch = true
source = [
    "commands",
    "github",
    "shared",
    "saint"
]
omit = [
    "**/tests/**",
    "test_*.py"
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
