[tool.poetry]
name = "ghd"
version = "0.1.0"
description = "GitHub Deployments API CLI"
authors = ["moneymeets GmbH <service@moneymeets.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.3"
tabulate = "^0.8.6"
progressbar2 = "^3.47.0"
aiohttp = "^3.6.2"
click = "^7.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-quotes = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-import-order = "*"

[tool.poetry.scripts]
ghd = 'ghd:run_main'
[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
