[tool.poetry]
name = "ghd"
version = "0.1.0"
description = "GitHub Deployments API CLI"
authors = ["moneymeets GmbH <service@moneymeets.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
colorama = "^0.4.3"
tabulate = "^0.8.6"
progressbar2 = "^3.47.0"
aiohttp = "^3.6.2"
click = "^7.0"
blessed = "^1.17.5"
coverage = "^5.1"
nose = "^1.3.7"
pyte = "^0.8.0"
babel = "^2.8.0"
pre-commit = "^2.5.1"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "*"
flake8-black = "^0.2.0"
flake8-quotes = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-import-order = "*"

[tool.poetry.scripts]
ghd = 'ghd:run_main'

[tool.black]
line_length = 120
target_version = ["py38"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

