[tool.poetry]
name = "ghd"
version = "0.1.0"
description = "GitHub Deployments API CLI"
authors = ["moneymeets GmbH <service@moneymeets.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
colorama = "*"
tabulate = "*"
progressbar2 = "*"
aiohttp = "*"
click = "*"
blessed = "*"
pyte = "*"
babel = "*"
pre-commit = "*"
dataclasses-json = "*"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]
coverage = "*"
pytest = "*"
black = "*"
flake8 = "*"
flake8-black = "*"
flake8-quotes = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-import-order = "*"

[tool.poetry.scripts]
ghd = 'ghd:run_main'

[tool.black]
line_length = 120
target_version = ["py39"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

